--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Video Redirect</title>
     <script>
         // Enlace al video de YouTube
-        var videoURL = "https://www.youtube.com/watch?v=BT4WzyT2g8k&ab_channel=AKRITIGOSWAMI"; // Reemplaza 'tu_video_id' con el ID del video que quieres redirigir
+        var videoURL = "https://www.youtube.com/"; 
 
         // Redirigir automáticamente
         window.onload = function() {
