--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </script>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, <a href="#" id="video-link">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="#" id="https://www.youtube.com/">haz clic aquí</a>.</p>
     <script>
         // Enlace de respaldo en caso de que JavaScript esté deshabilitado
-        document.getElementById('video-link').href = videoURL;
+        document.getElementById('https://www.youtube.com/').href = videoURL;
     </script>
 </body>
 </html>
