--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Video Redirect</title>
     <script>
         // Enlace al video de YouTube
-        var videoURL = "https://www.youtube.com/"; 
+        var videoURL = "https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera"; 
 
         // Redirigir automáticamente
         window.onload = function() {
@@ -15,10 +15,10 @@
     </script>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, <a href="#" id="https://www.youtube.com/">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="#" id="https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera">haz clic aquí</a>.</p>
     <script>
         // Enlace de respaldo en caso de que JavaScript esté deshabilitado
-        document.getElementById('https://www.youtube.com/').href = videoURL;
+        document.getElementById('https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera').href = videoURL;
     </script>
 </body>
 </html>
