--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Video Redirect</title>
     <script>
         // Enlace al video de YouTube
-        var videoURL = "https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera"; 
+        var videoURL = "https://www.youtube.com/watch?v=BT4WzyT2g8k&ab_channel=AKRITIGOSWAMI"; // Reemplaza con el enlace del nuevo video
+
+        // Agregar un parámetro dinámico para evitar la caché
+        videoURL += "&t=" + new Date().getTime(); // Esto agrega una marca de tiempo
 
         // Redirigir automáticamente
         window.onload = function() {
@@ -15,10 +18,10 @@
     </script>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, <a href="#" id="https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="#" id="video-link">haz clic aquí</a>.</p>
     <script>
         // Enlace de respaldo en caso de que JavaScript esté deshabilitado
-        document.getElementById('https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera').href = videoURL;
+        document.getElementById('video-link').href = videoURL;
     </script>
 </body>
 </html>
