--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Video Redirect</title>
     <script>
         // Enlace al video de YouTube
-        var videoURL = "https://www.youtube.com/watch?v=BT4WzyT2g8k&ab_channel=AKRITIGOSWAMI"; // Reemplaza con el enlace del nuevo video
+        var videoURL = "https://www.youtube.com/watch?v=xMC_SYyd1rQ&t=328s&ab_channel=Ver%C3%B3nicaMorera"; // Reemplaza con el enlace del nuevo video
 
         // Agregar un parámetro dinámico para evitar la caché
         videoURL += "&t=" + new Date().getTime(); // Esto agrega una marca de tiempo
